IVYPORTAL-10564: Various or urgent requests in IVYPORTAL S193 - Fixed minor bug: scroll height not updated when resize - Fixed minor bug: "Apply filter" button in chart creation page jump down in small screen - Fixed minor bug: misalignment between filter card and chart card - Fixed minor bug: duplicated case name in case information dialog - Fixed minor bug: remove edit task name feature - Fixed minor bug: recover missing buttons of case/task filters in small screen - Fixed minor bug: consolidate header in small screen

--- a/AxonIvyPortal/PortalStyle/webContent/resources/css/portal-variables.css
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/css/portal-variables.css
@@ -113,8 +113,7 @@
   --widget-header-input-hover-background-color: transparent;
   --widget-header-font-size: 1.8rem;
   --widget-header-font-weight: bold;
-  --widget-header-mobile-border-bottom: var(--ivy-primary-color-grey-light);
-  
+
   /* Portal Card */
   --card-box-shadow: 0px 4px 16px rgba(27, 27, 27, 0.16);
   --card-border-radius: 5px;
